tests/mvar/reject/write_in_guard.nos
# expect: error
# Write to mvar in function that also calls mvar-accessing function

mvar a: Int = 0
mvar b: Int = 0

read_a() = a

write_both() = {
    # UNSAFE: writes to a and calls read_a which reads a
    a = 10
    b = read_a()
    b
}

main() = {
    write_both()
}
